syntax = "proto3";
option go_package = "kademlia/service";

service KademliaService {
        rpc PING (PingCheck) returns (NodeInfo) {}
        rpc STORE (StoreRequest) returns (StoreResponse) {}
        rpc FIND_NODE (LookupRequest) returns (LookupResponse) {}
        rpc FIND_VALUE (LookupRequest) returns (ValueResponse) {}
        rpc ROUTING_TABLE_DUMP (RoutingTableDumpRequest) returns (RoutingTableDumpResponse) {}
        rpc DATA_DUMP (DataDumpRequest) returns (DataDumpResponse) {}
        rpc HEAL_REPLICAS (HealReplicasRequest) returns (HealReplicasResponse) {}
}

message NodeInfo {
        string ip = 1;
        int32 port = 2;
        string id = 3;
}

message NodeInfoLookup {
        NodeInfo nodeDetails = 1;
        uint32 distanceToTarget = 2;
}

message PingCheck {
}

message StoreRequest {
        string key = 1;
        int32 value = 2;
        optional NodeInfo requester = 3;
        optional uint64 magicCookie = 4;
        optional int32 version = 5;
}

message StoreResponse {
        repeated NodeInfoLookup dataNodes = 2;
}

message LookupRequest {
        optional NodeInfo requester = 1;
        string target = 2;
        optional uint64 magicCookie = 3;
}

message LookupResponse {
        repeated NodeInfoLookup nodes = 1;
}

message ValueResponse {
        optional int32 value = 1;
        repeated NodeInfoLookup nodes = 2;
}

message RoutingTableDumpRequest {
}

message NodeInfoList {
  repeated NodeInfo nodes = 1;
}

message RoutingTableDumpResponse {
  map<uint32, NodeInfoList> pairs = 1;
}

message DataDumpRequest {
}

message DataDumpResponse {
  map<string, int32> pairs = 1;
  map<string, int32> versions = 2;
}

message HealReplicasRequest {
  string key = 1;
  optional int32 value = 2;
  optional int32 currentReplicas = 3;
  optional NodeInfo requester = 4;
  optional uint64 magicCookie = 5;
}

message HealReplicasResponse {
  repeated NodeInfo nodes = 1;
}